# geojsonapi

./: .coveragerc  .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  env-example  gunicorn-cfg.py  manage.py  pyproject.toml
.circleci/: config.yml
app/geojsonapi/: settings.py  wsgi.py
caddy/: Caddyfile  Dockerfile
geojsonapi/: asgi.py  settings.py  urls.py
geojsonapi/apps/: conftest.py
geojsonapi/apps/core/: apps.py  models.py
geojsonapi/apps/providers/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
geojsonapi/apps/providers/migrations/: 0001_initial.py
geojsonapi/apps/providers/tests/: test_providers_api.py
geojsonapi/apps/serviceareas/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
geojsonapi/apps/serviceareas/migrations/: 0001_initial.py
geojsonapi/apps/serviceareas/tests/: test_servicearea_api.py
geojsonapi/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
geojsonapi/apps/users/migrations/: 0001_initial.py
geojsonapi/apps/users/tests/: test_user_model.py  test_users_api.py
geojsonapi/geojsonapi/: settings.py
geojsonapi/users/migrations/: 0001_initial.py
