[tool.poetry]
name = "geojsonapi"
version = "0.1.0"
description = "GeoJSON API"
authors = ["José Vitor Santos Silva <jvss23031999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
django-environ = "^0.9.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
